Add calculator functionality

--- a/index.html
+++ b/index.html
@@ -19,22 +19,22 @@
         <button id="Delete">Delete</button>
       </div>
       <div class="main-buttons">
-        <button id="zero">0</button>
-        <button id="one">1</button>
-        <button id="two">2</button>
-        <button id="three">3</button>
-        <button id="four">4</button>
-        <button id="five">5</button>
-        <button id="six">6</button>
-        <button id="seven">7</button>
-        <button id="eight">8</button>
-        <button id="nine">9</button>
-        <button id="decimal">.</button>
+        <button class="number" id="seven">7</button>
+        <button class="number" id="eight">8</button>
+        <button class="number" id="nine">9</button>
+        <button id="divide" onclick="changeSign('divide')">/</button>
+        <button class="number" id="six">6</button>
+        <button class="number" id="five">5</button>
+        <button class="number" id="four">4</button>
+        <button id="multiply" onclick="changeSign('multiply')">x</button>
+        <button class="number" id="three">3</button>
+        <button class="number" id="two">2</button>
+        <button class="number" id="one">1</button>
+        <button id="minus" onclick="changeSign('minus')">-</button>
+        <button class="number" id="decimal">.</button>
+        <button class="number" id="zero">0</button>
         <button id="equal">=</button>
-        <button id="add">+</button>
-        <button id="minus">-</button>
-        <button id="multiply">x</button>
-        <button id="divide">/</button>
+        <button id="add" onclick="changeSign('add')">+</button>
       </div>
     </div>
   </body>
