Add full calc functionality

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
   <body>
     <div class="calculator">
       <div class="display">
-        <p class="top-display">top-display</p>
-        <p class="bot-display">bot-dsplay</p>
+        <p id="top-display">top-display</p>
+        <p id="bot-display">bot-dsplay</p>
       </div>
       <div class="middle-buttons">
-        <button id="clear">Clear</button>
+        <button id="clear" onclick="reset()">Clear</button>
         <button id="Delete">Delete</button>
       </div>
       <div class="main-buttons">
