Add full basic functionality

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       </div>
       <div class="middle-buttons">
         <button id="clear" onclick="reset()">Clear</button>
-        <button id="Delete">Delete</button>
+        <button id="Delete" onclick="backspace()">Delete</button>
       </div>
       <div class="main-buttons">
         <button class="number" id="seven">7</button>
